test/classes/dinan/use_of_uninitialized_field.good
use_of_uninitialized_field.chpl:2: error: statement references variable 'y' before it is defined
use_of_uninitialized_field.chpl:3: note: the variable 'y' is defined here
